opam-version: "1.2"
maintainer: "rudi.grinberg@gmail.com"
authors: ["Rudi Grinberg"]
license: "MIT"

homepage: "https://github.com/rgrinberg/opium"
bug-reports: "https://github.com/rgrinberg/opium/issues"
dev-repo: "https://github.com/rgrinberg/opium.git"

build: [
  ["jbuilder" "build" "--only-packages" "opium" "--root" "."
   "-j" jobs "@install"]
]

depends: [
  "jbuilder" {build}
  "opium_kernel"
  "base-unix"
  "lwt"
  "cmdliner"
  "ppx_fields_conv"
  "ppx_sexp_conv"
  "re" {>= "1.3.0"}
  "magic-mime"
  "alcotest" {test}
  "cow" {test & >= "0.10.0"}
]

available: [ocaml-version >= "4.01.0"]
