opam-version: "1.2"
maintainer: "rudi.grinberg@gmail.com"
authors: ["Rudi Grinberg"]
license: "MIT"

homepage: "https://github.com/rgrinberg/opium"
bug-reports: "https://github.com/rgrinberg/opium/issues"
dev-repo: "https://github.com/rgrinberg/opium.git"

build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build}
  "hmap"
  "cohttp" {>= "0.99.0"}
  "cohttp-lwt" {>= "0.99.0"}
  "ezjsonm" {>= "0.4.0"}
  "base64" {>= "2.0.0"}
  "lwt"
  "fieldslib" {>= "v0.9.0"}
  "sexplib" {>= "v0.9.0"}
  "ppx_fields_conv" {>= "v0.9.0"}
  "ppx_sexp_conv" {>= "v0.9.0"}
  "re" {>= "1.3.0"}
  "alcotest" {test}
  "cow" {test & >= "0.10.0"}
]

available: [ocaml-version >= "4.02.3"]