opam-version: "2.0"
maintainer: "rudi.grinberg@gmail.com"
authors: ["Rudi Grinberg"]
license: "MIT"

homepage: "https://github.com/rgrinberg/opium"
bug-reports: "https://github.com/rgrinberg/opium/issues"
dev-repo: "git+https://github.com/rgrinberg/opium.git"
synopsis: "Sinatra like web toolkit based on Lwt + Cohttp"
description: """
Opium_kernel is the Unix indpendent core of Opium. Useful for extremely portable environments such as mirage.
"""

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.04.1"}
  "dune" {build}
  "hmap"
  "cohttp" {>= "0.99.0"}
  "cohttp-lwt" {>= "0.99.0"}
  "ezjsonm" {>= "0.4.0"}
  "base64" {>= "2.0.0"}
  "lwt"
  "fieldslib" {>= "v0.9.0"}
  "sexplib" {>= "v0.9.0"}
  "ppx_fields_conv" {>= "v0.9.0"}
  "ppx_sexp_conv" {>= "v0.9.0"}
  "re" {>= "1.3.0"}
  "alcotest" {with-test}
]
