(executables
 (libraries re yojson opium logs.fmt base64 sexplib0)
 (preprocess
  (pps ppx_sexp_conv ppx_yojson_conv))
 (flags
  (:standard -safe-string))
 (names exit_hook_example hello_world_basic hello_world_html hello_world
   middleware_basic_auth middleware_debugger middleware_logger
   middleware_error_handler middleware_ua middleware_uppercase read_json_body
   sample static_serve_override just_kernel))

(alias
 (name examples)
 (deps exit_hook_example.exe hello_world_basic.exe hello_world_html.exe
   hello_world.exe middleware_basic_auth.exe middleware_debugger.exe
   middleware_logger.exe middleware_error_handler.exe middleware_ua.exe
   middleware_uppercase.exe read_json_body.exe sample.exe
   static_serve_override.exe just_kernel.exe))
