(tests
 (names middleware_allow_cors request response route)
 (libraries alcotest alcotest-lwt lwt opium opium_testing)
 (modules :standard \ opium_router_tests)
 (package opium))

(library
 (name opium_tests)
 (libraries opium)
 (preprocess
  (pps ppx_expect))
 (inline_tests)
 (modules opium_router_tests))
